objects/Operation_History__c.object
<CustomObject>
    <fields>
        <fullName>Calculate_Operation_TAT__c</fullName>
        <formula>(CASE(MOD( DATEVALUE(Date_to_Operation__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c))/7)*5)
)-1+(Date_from_Operation__c - Date_to_Operation__c-(DATEVALUE( Date_from_Operation__c ) - DATEVALUE(Date_to_Operation__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Operation TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Operation__c</fullName>
        <label>Current Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Awaiting Arrival</fullName>
                </value>
                <value>
                    <fullName>ILT</fullName>
                </value>
                <value>
                    <fullName>MFG Test</fullName>
                </value>
                <value>
                    <fullName>MFT </fullName>
                </value>
                <value>
                    <fullName>Module Inspection</fullName>
                </value>
                <value>
                    <fullName>Outsource Analysis</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PFA</fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 10 </fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 9 CFA </fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 9 WWAS </fullName>
                </value>
                <value>
                    <fullName>TAE</fullName>
                </value>
                <value>
                    <fullName>Test Prep</fullName>
                </value>
                <value>
                    <fullName>Wafer Inspection</fullName>
                </value>
                <value>
                    <fullName>WFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_from_Operation__c</fullName>
        <label>Date from Operation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_to_Operation__c</fullName>
        <label>Date to Operation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>RMA Wafer Analysis</label>
        <referenceTo>RMA_Analysis__c</referenceTo>
        <relationshipLabel>Operation History</relationshipLabel>
        <relationshipName>Operation_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Operation_TAT__c</fullName>
        <label>Operation TAT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Operation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABIST</fullName>
                </value>
                <value>
                    <fullName>ABIST VCUT</fullName>
                </value>
                <value>
                    <fullName>ASST</fullName>
                </value>
                <value>
                    <fullName>ASST VCUT</fullName>
                </value>
                <value>
                    <fullName>BEOL</fullName>
                </value>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>CORE VCUT</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>EDRAM VCUT</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>FEOL</fullName>
                </value>
                <value>
                    <fullName>FUNCTIONAL OTHER</fullName>
                </value>
                <value>
                    <fullName>HSS</fullName>
                </value>
                <value>
                    <fullName>HSS VCUT</fullName>
                </value>
                <value>
                    <fullName>IDD</fullName>
                </value>
                <value>
                    <fullName>NDF</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NPDF</fullName>
                </value>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>PARMETRICS</fullName>
                </value>
                <value>
                    <fullName>PLL</fullName>
                </value>
                <value>
                    <fullName>PLL VCUT</fullName>
                </value>
                <value>
                    <fullName>PROBE MELT</fullName>
                </value>
                <value>
                    <fullName>SHORTS</fullName>
                </value>
                <value>
                    <fullName>Unable to Reball</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Operation__c</fullName>
        <label>Sub Operation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Current_Operation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reball BMT</fullName>
                </value>
                <value>
                    <fullName>Reball SGP</fullName>
                </value>
                <value>
                    <fullName>BMT Test</fullName>
                </value>
                <value>
                    <fullName>BTV Test</fullName>
                </value>
                <value>
                    <fullName>SGP Test</fullName>
                </value>
                <value>
                    <fullName>BMT TAE</fullName>
                </value>
                <value>
                    <fullName>BTV TAE</fullName>
                </value>
                <value>
                    <fullName>BTV WWAS</fullName>
                </value>
                <value>
                    <fullName>PE BTV</fullName>
                </value>
                <value>
                    <fullName>Awaiting Data</fullName>
                </value>
                <value>
                    <fullName>Electrical Validation</fullName>
                </value>
                <value>
                    <fullName>Physical analysis</fullName>
                </value>
                <value>
                    <fullName>Report to Submitter</fullName>
                </value>
                <value>
                    <fullName>RVSI</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Reball Other</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
                <value>
                    <fullName>X-Fab</fullName>
                </value>
                <value>
                    <fullName>BTV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Operation History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation History</pluralLabel>
    <recordTypes>
        <fullName>ASIC</fullName>
        <active>true</active>
        <description>ASICs record type for ASICs business</description>
        <label>ASICs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundry</fullName>
        <active>true</active>
        <description>Foundry record type for foundry business users</description>
        <label>Foundry</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>